k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quick-page-service
  namespace: quick-page
spec:
  selector:
    app: quick-page
  ports:
    - port: 80
      targetPort: 3000
